added chat interface and question layout

--- a/Website/chat.html
+++ b/Website/chat.html
@@ -17,19 +17,29 @@
         <!--<div class="leaderboardTitle">-->
             <!--Top Queries:-->
         <!--</div>-->
-        <div class="big">
-            <div class="pagewrap" id="hello">
-                <div class="container" id="cont1">	
-                </div>	
-            </div>
 
-            <div class="leaderboard">
-                <canvas data-processing-sources="mainPDE.pde"></canvas>
-                <div id="overlay">
-                PUT LIST HERE
-                </div>
+        <div class="leaderboard">
+            <canvas data-processing-sources="mainPDE.pde"></canvas>
+            <div id="overlay">
+                <li><font size="+20">HELLo</font></li>
+                <li>HELLo</li>
             </div>
         </div>
+
+        <div class="big">
+            <div class="pagewrap" id="hello">
+                <canvas data-processing-sources="mainPDE.pde"></canvas>
+                <div class="container" id="cont1">	
+                    </div>	
+                </div>
+                <div id ="form">
+                    <textarea class='textbox1' name="myTextBox" id="yepyep" >
+                    </textarea>
+                    <form id="form1">
+                        <input class="button" type="button" id="button1" value='Send'/>
+                    </form>
+                </div>
+            </div>
 
 		<script type="text/javascript">	
 		$(document).ready(function(){
@@ -74,12 +84,5 @@
 		 });
 		</script>
 
-		<div id ="form">
-			<textarea class='textbox1' name="myTextBox" id="yepyep" >
-			</textarea>
-			<form id="form1">
-				<input class="button" type="button" id="button1" value='Send'/>
-			</form>
-		</div>
 	</body>
 </html>
